fix(Picker): fix `getPropertyValue` compatibility issue on iOS 10

--- a/src/components/picker-view/picker-view.less
+++ b/src/components/picker-view/picker-view.less
@@ -130,3 +130,12 @@
   justify-content: center;
   align-items: center;
 }
+
+.@{class-prefix-picker-view}-item-height-measure {
+  position: relative;
+  left: 0;
+  top: 0;
+  height: var(--item-height);
+  width: 0;
+  pointer-events: none;
+}
